[package]
name = "bitcoin_uri"
version = "0.1.0"
authors = ["Dan Gould <d@ngould.dev>"]
edition = "2018"
description = "Rust-idiomatic, compliant, flexible and performant bitcoin URI crate."
repository = "https://github.com/payjoin/bitcoin_uri"
readme = "README.md"
keywords = ["bitcoin", "bip21", "parsing", "newtypes"]
categories = ["cryptography::cryptocurrencies", "encoding", "rust-patterns", "value-formatting"]
license = "MITNFA"

[package.metadata.docs.rs]
features = ["std", "non-compliant-bytes"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Implements std::error::Error for error types
std = ["percent-encoding-rfc3986/std", "bitcoin/std"]
# Enables non-BIP21-compliant feature of using raw bytes instead of validated UTF-8 strings.
non-compliant-bytes = ["either"]

[dependencies]
either = { version = "1.6.1", optional = true }
percent-encoding-rfc3986 = "0.1.3"
bitcoin = { version = "0.32.0", default-features = false }

[dev-dependencies]
bitcoin = { version = "0.32.0", features = ["std"] }
